# AviSynthPlus-Butteraugli

./: .gitmodules  Butteraugli.rc.in  CHANGELOG.md  CMakeLists.txt  README.md
src/: Butteraugli.cpp  Butteraugli.rc
